fix(drawer): footerAlign=left

--- a/base-components/src/drawer/main.scss
+++ b/base-components/src/drawer/main.scss
@@ -23,7 +23,7 @@
   }
 
   &-left {
-    text-align: right;
+    text-align: left;
   }
 
   &-center {
